force-app/main/default/objects/AcademicSession/AcademicSession.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>