force-app/main/default/objects/AcademicSession/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Academic Sessions</relationshipLabel>
    <relationshipName>Academic_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>