force-app/main/default/objects/AcademicSession/fields/Seq_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>Seq_No_Formula__c</fullName>
    <formula>VALUE(RIGHT( Name , (LEN(Name) - FIND(&quot; &quot;,Name))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seq No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>