force-app/main/default/objects/AcademicSession/fields/To_date__c.field-meta.xml
<CustomField>
    <fullName>To_date__c</fullName>
    <label>To date</label>
    <type>Date</type>
</CustomField>