force-app/main/default/objects/AcademicSession/listViews/All_Academic_Session.listView-meta.xml
<ListView>
    <fullName>All_Academic_Session</fullName>
    <columns>Name</columns>
    <columns>AcademicTerm</columns>
    <columns>IsActive</columns>
    <columns>Location__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_date__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Academic Session</label>
</ListView>